# game

./: CMakeLists.txt
SFML/include/SFML/Graphics/: RenderStates.hpp  RenderTexture.hpp  RenderWindow.hpp  Shader.hpp  Sprite.hpp  Texture.hpp  Transform.hpp  Transformable.hpp  Vertex.hpp
SFML/include/SFML/System/: String.hpp
SFML/share/SFML/examples/opengl/: OpenGL.cpp
SFML/share/SFML/examples/shader/: Shader.cpp
src/: main.cpp  states.h  world.cc  world.h
src/components/: component.cc  components.h  group.cc  group.h  hitbox.cc  hitbox.h  texture.cc  texture.h
src/components/controller/: controller.cc  controller.h  playerController.cc  playerController.h
src/components/entities/: entity.cc  entity.h  testPlayer.cc  testPlayer.h
src/helpers/: constants.h  tags.h  textureHandler.cc  textureHandler.h
src/map/: tileMap.cc  tileMap.h
src/messages/: messageSystem.h  messageTypes.h  tags.h  types.h
src/states/: playState.cc  playState.h  state.h  stateMachine.cc  stateMachine.h
src/structures/: quadtree.cc  quadtree.h
